<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="LOCATION MANAGEMENT"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:background="#7f8c8d"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="REQUEST LOCATION AUTHORIZATION FROM ADMINISTRATOR"
            android:textColor="@color/whiteCardColor"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:background="#ecf0f1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtpromt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textSize="12dp"
                android:text="@string/promtminingfulname"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtpromt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textSize="12dp"
                android:text="@string/promtminingselectspecific"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtpromt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textSize="12dp"
                android:text="@string/promtselectadmin"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputedtxtLocKey"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtLocKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Custom Location Name(Optional) : *"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/edtxtLocReqKey"
                    style="@style/modifiedEditText"
                    android:maxLines="1"
                    android:text="UNKNOWN"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputedtxtadmin"
            style="@style/parent"
            android:layout_marginTop="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/requesr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Request from selected Administrator : "
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/ddlSelectAdmin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/modifiedDDL"
                    android:visibility="visible" />

            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>




    <Button
        android:id="@+id/btnRequestKey"
        android:text="REQUEST"
        android:textSize="12dp"
        android:layout_height="50dp"
        android:textColor="@color/whiteCardColor"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"/>


</LinearLayout>