<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="LOCATION MANAGEMENT"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/wpicon" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView9"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/promtgivenLoc"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/promtminingfulname"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/promtminingkeyin"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputedPhoneName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtPhoneName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Location Name : "
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtxtPhoneNameUser"
                        style="@style/modifiedEditText"
                        android:text=""
                        android:maxLines="1" />
                </LinearLayout>



            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputedtxtLocKey"
                style="@style/parent"
                android:layout_marginTop="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtLocKey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Location Key : *"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/edtxtLocKeyUser"
                        style="@style/modifiedEditText"
                        android:hint="Please fill in location key"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </LinearLayout>




            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUserRegisterLoc"
                style="@style/loginButton"
                android:text="REGISTER"
                android:layout_gravity="center_horizontal"
                android:layout_width="250dp"
                android:layout_marginTop="@dimen/loginViewsMargin"/>


            <Button
                android:id="@+id/btnUserLocReSET"
                style="@style/loginButton"
                android:layout_width="250dp"
                android:text="RESET"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnUserLocCancel"
                style="@style/loginButton"
                android:layout_width="250dp"
                android:text="CANCEL"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>